--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -49,7 +49,9 @@
       order: 4;
       width: 100%;
       /* turn on the join div */
-      display: block;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
     }
 
 
@@ -79,6 +81,7 @@
       justify-content: space-between;
       align-content: center;
       padding: 0px;
+
     }
     footer div {
       width: 50%;
@@ -118,13 +121,13 @@
       margin-block-start: 0;
       margin-block-end: 0;
       margin-top: 20px;
-      font-size: 40px;
+      font-size: 28px;
     }
 
     .footer_subtitle {
       width: 40%;
       text-align: center;
-      font-size: 20px;
+      font-size: 14px;
       margin-top: 0;
       margin-left: 0;
       letter-spacing: 3px;
@@ -151,8 +154,6 @@
     .footer_footer_bottom_row {
       width: 100%;
     }
-
-
  
 }
 
